added to jupyter nb

--- a/GuidedTour/GuidedTour.ipynb
+++ b/GuidedTour/GuidedTour.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1757857c",
+   "id": "9cd9c8ca",
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7da2fbb",
+   "id": "6ef66601",
    "metadata": {},
    "source": [
     "# Data Scraping\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "858aa12e",
+   "id": "ac2b4b6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be77e206",
+   "id": "5e2532d7",
    "metadata": {},
    "source": [
     "# Change Point Analysis\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7e4a6ed",
+   "id": "8f01547f",
    "metadata": {
     "scrolled": false
    },
@@ -137,8 +137,8 @@
        "                background: #F44336;\n",
        "            }\n",
        "        </style>\n",
-       "      <progress value='26212' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      18.72% [26212/140000 00:54<03:58 Sampling 4 chains, 0 divergences]\n",
+       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [140000/140000 05:01<00:00 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -148,6 +148,147 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 354 seconds.\n",
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
+      "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
+      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Point Guess 1.0\n",
+      "{'change_point_confidence': [1.0], 'mus': [(0.0023323880666780163, 0.0008371841744423609)], 'mu_diff': [-0.0014952038922356554], 'tau_map': ['2021-01-10'], 'tau_std': [148.7006962275589], 'entropy': [2.9526661589778502], 'change_point_guess': [1.0]}\n",
+      "appending\n",
+      "working on nio\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  trace = pm.sample(steps, tune=tune, step = step)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "CompoundStep\n",
+      ">Metropolis: [delta]\n",
+      ">Metropolis: [change_point_beta]\n",
+      ">Metropolis: [tau_beta]\n",
+      ">Metropolis: [beta_2]\n",
+      ">Metropolis: [alpha_2]\n",
+      ">Metropolis: [beta_1]\n",
+      ">Metropolis: [alpha_1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [140000/140000 03:41<00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 248 seconds.\n",
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
+      "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
+      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Point Guess 1.0\n",
+      "{'change_point_confidence': [1.0], 'mus': [(0.005484919474305361, 0.013266042177712267)], 'mu_diff': [0.007781122703406906], 'tau_map': ['2020-10-11'], 'tau_std': [69.40882676389283], 'entropy': [2.757452672652039], 'change_point_guess': [1.0]}\n",
+      "appending\n",
+      "working on virus\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  trace = pm.sample(steps, tune=tune, step = step)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "CompoundStep\n",
+      ">Metropolis: [delta]\n",
+      ">Metropolis: [change_point_beta]\n",
+      ">Metropolis: [tau_beta]\n",
+      ">Metropolis: [beta_2]\n",
+      ">Metropolis: [alpha_2]\n",
+      ">Metropolis: [beta_1]\n",
+      ">Metropolis: [alpha_1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      100.00% [140000/140000 06:30<00:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 429 seconds.\n"
+     ]
     }
    ],
    "source": [
@@ -160,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dbd526f",
+   "id": "5ee09e10",
    "metadata": {},
    "source": [
     "After running, these files will in ../Data/subreddit_subreddit/Changepoints/Metropolis_30000Draws_5000Tune\n",
@@ -170,17 +311,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acdfacb1",
+   "id": "91978621",
    "metadata": {},
    "source": [
     "For instance: \n",
     "    \n",
-    "![title](../Data/subreddit_WallStreetBets/Changepoints/Metropolis_30000Draws_5000Tune/ChangePoint_tendies.png)"
+    "![title](../Data/subreddit_WallStreetBets/Changepoints/Metropolis_30000Draws_5000Tune/ChangePoint_virus.png)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "01619fa7",
+   "id": "0e839a97",
    "metadata": {},
    "source": [
     "### Brief explanation of how this works:\n",
@@ -200,23 +341,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "abdfd9cd",
+   "execution_count": null,
+   "id": "dd0143cc",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnpicklingError",
-     "evalue": "invalid load key, ','.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnpicklingError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-08e4922cc3e5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mdataframe_path\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mf\"../Data/subreddit_{subreddit}/\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mpreprocessed_location\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdataframe_path\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m\"changepoint_preprocessed.pkl\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpreprocessed_location\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\anaconda3\\envs\\ML\\lib\\site-packages\\pandas\\io\\pickle.py\u001b[0m in \u001b[0;36mread_pickle\u001b[1;34m(filepath_or_buffer, compression, storage_options)\u001b[0m\n\u001b[0;32m    201\u001b[0m                     \u001b[1;31m# We want to silence any warnings about, e.g. moved modules.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    202\u001b[0m                     \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msimplefilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"ignore\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mWarning\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 203\u001b[1;33m                     \u001b[1;32mreturn\u001b[0m \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhandles\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhandle\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m# type: ignore[arg-type]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    204\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mexcs_to_catch\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    205\u001b[0m                 \u001b[1;31m# e.g.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnpicklingError\u001b[0m: invalid load key, ','."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "DATA_FOLDER = f\"../Data/subreddit_{subreddit}/Changepoints/metropolis_30000Draws_5000Tune/\"\n",
@@ -228,23 +356,25 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6d459be8",
+   "id": "8068f49f",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "d71d5072",
+   "id": "a58f989a",
    "metadata": {},
    "source": [
-    "# Neural Nets\n"
+    "# Neural Nets\n",
+    "\n",
+    "some text"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f87793f9",
+   "id": "462150cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a7efb3",
+   "id": "8a765b9a",
    "metadata": {},
    "source": [
     "## Predicted popularity as a time series"
@@ -262,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3934b96",
+   "id": "7d8050bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,9 +401,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "edf34ba0",
+   "metadata": {},
+   "source": [
+    "![title](../Data/subreddit_WallStreetBets/GMEsixtimes.png)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f508bc21",
+   "id": "e62ec569",
    "metadata": {},
    "outputs": [],
    "source": []
