--- a/GuidedTour/GuidedTour.ipynb
+++ b/GuidedTour/GuidedTour.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9cd9c8ca",
+   "id": "4220ca19",
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef66601",
+   "id": "267cdc89",
    "metadata": {},
    "source": [
     "# Data Scraping\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ac2b4b6a",
+   "id": "e153ae34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e2532d7",
+   "id": "016b29dd",
    "metadata": {},
    "source": [
     "# Change Point Analysis\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f01547f",
+   "id": "0f904615",
    "metadata": {
     "scrolled": false
    },
@@ -287,8 +287,67 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 429 seconds.\n"
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 429 seconds.\n",
+      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
+      "The number of effective samples is smaller than 10% for some parameters.\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Point Guess 1.0\n",
+      "{'change_point_confidence': [1.0], 'mus': [(0.01515717074209762, 0.0018224446601984431)], 'mu_diff': [-0.013334726081899177], 'tau_map': ['2020-04-09'], 'tau_std': [2.9174578867767034], 'entropy': [2.1174512889488297], 'change_point_guess': [1.0]}\n",
+      "appending\n",
+      "working on wsb\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
+      "  trace = pm.sample(steps, tune=tune, step = step)\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "CompoundStep\n",
+      ">Metropolis: [delta]\n",
+      ">Metropolis: [change_point_beta]\n",
+      ">Metropolis: [tau_beta]\n",
+      ">Metropolis: [beta_2]\n",
+      ">Metropolis: [alpha_2]\n",
+      ">Metropolis: [beta_1]\n",
+      ">Metropolis: [alpha_1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "        <style>\n",
+       "            /* Turns off some styling */\n",
+       "            progress {\n",
+       "                /* gets rid of default border in Firefox and Opera. */\n",
+       "                border: none;\n",
+       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
+       "                background-size: auto;\n",
+       "            }\n",
+       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
+       "                background: #F44336;\n",
+       "            }\n",
+       "        </style>\n",
+       "      <progress value='16389' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      11.71% [16389/140000 00:39<05:00 Sampling 4 chains, 0 divergences]\n",
+       "    </div>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -301,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ee09e10",
+   "id": "aae7a4ef",
    "metadata": {},
    "source": [
     "After running, these files will in ../Data/subreddit_subreddit/Changepoints/Metropolis_30000Draws_5000Tune\n",
@@ -311,7 +370,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91978621",
+   "id": "2d034a48",
    "metadata": {},
    "source": [
     "For instance: \n",
@@ -321,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e839a97",
+   "id": "9eada99a",
    "metadata": {},
    "source": [
     "### Brief explanation of how this works:\n",
@@ -342,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd0143cc",
+   "id": "de454300",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,14 +415,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8068f49f",
+   "id": "6af418d6",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "a58f989a",
+   "id": "c8657e2b",
    "metadata": {},
    "source": [
     "# Neural Nets\n",
@@ -374,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "462150cc",
+   "id": "f4e04929",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a765b9a",
+   "id": "095998b0",
    "metadata": {},
    "source": [
     "## Predicted popularity as a time series"
@@ -392,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8050bf",
+   "id": "8971f160",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +461,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edf34ba0",
+   "id": "77861752",
    "metadata": {},
    "source": [
     "![title](../Data/subreddit_WallStreetBets/GMEsixtimes.png)\n"
@@ -411,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e62ec569",
+   "id": "b861cacf",
    "metadata": {},
    "outputs": [],
    "source": []
