--- a/GuidedTour/GuidedTour.ipynb
+++ b/GuidedTour/GuidedTour.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4220ca19",
+   "id": "80601a95",
    "metadata": {
     "scrolled": true
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "267cdc89",
+   "id": "01d87b64",
    "metadata": {},
    "source": [
     "# Data Scraping\n",
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e153ae34",
+   "id": "6cc661bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "016b29dd",
+   "id": "c87478f4",
    "metadata": {},
    "source": [
     "# Change Point Analysis\n",
@@ -86,9 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f904615",
+   "id": "4e579ef0",
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -97,10 +97,9 @@
      "text": [
       "Computing the changepoints:\n",
       "working on  WallStreetBets\n",
-      "Did not find preprocessed version, preprocessing. (This will only be done once.)\n",
-      "['debate', 'nio', 'virus', 'wsb', 'moon', 'biden', 'gme', 'sos', 'gang', 'merry', 'nkla', 'mt', 'two', 'week', 'tesla', 'tsla', 'go', 'currency', 'year', 'detroit', 'war', 'robinhood', 'calls', 'mascot', 'amc', 'azn', 'rh', 'citron', 'trump', 'mnmd', 'spy', 'wkhs', 'test', 'stock', 'pltr', 'spce', 'nikola', 'bezos', 'dd', 'like', 'mvis', 'ev', 'next', 'fortnite', 'kodk', 'bb', 'options', 'month', 'bear', 'election', 'new', 'slv', 'questrade', 'coin', 'stocks', 'christmas', 'short', 'covid', 'twitter', 'gold', 'dogecoin', 'hold', 'july', 'earnings', 'msft', 'today', 'get', 'one', 'fed', 'day', 'prpl', 'may', 'iran', 'sndl', 'trading', 'closed', 'rkt', 'tendies', 'tomorrow', 'trevor', 'buy', 'puts', 'im', 'suicide', 'snap', 'kodak', 'k', 'market', 'clov', 'plug', 'money', 'amd', 'monday', 'log', 'coronavirus', 'oil', 'apes', 'elon', 'uso', 'jpow'] pop_words\n",
+      "['log', 'kodak', 'short', 'mnmd', 'monday', 'snap', 'month', 'wsb', 'next', 'slv', 'questrade', 'rh', 'gold', 'iran', 'mascot', 'ev', 'covid', 'rkt', 'dd', 'fed', 'biden', 'may', 'apes', 'nikola', 'robinhood', 'nkla', 'elon', 'options', 'buy', 'coronavirus', 'clov', 'msft', 'azn', 'year', 'july', 'suicide', 'citron', 'trevor', 'merry', 'gme', 'detroit', 'plug', 'debate', 'mt', 'tomorrow', 'wkhs', 'test', 'bezos', 'new', 'trading', 'spy', 'two', 'one', 'twitter', 'election', 'get', 'christmas', 'tendies', 'sndl', 'tsla', 'puts', 'oil', 'sos', 'virus', 'war', 'moon', 'spce', 'k', 'week', 'today', 'hold', 'dogecoin', 'uso', 'amd', 'trump', 'earnings', 'mvis', 'jpow', 'im', 'amc', 'bear', 'currency', 'day', 'market', 'pltr', 'tesla', 'kodk', 'stock', 'gang', 'go', 'stocks', 'bb', 'money', 'closed', 'nio', 'coin', 'prpl', 'calls', 'like', 'fortnite'] pop_words\n",
       "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\n",
-      "working on debate\n"
+      "working on log\n"
      ]
     },
     {
@@ -138,7 +137,7 @@
        "            }\n",
        "        </style>\n",
        "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [140000/140000 05:01<00:00 Sampling 4 chains, 0 divergences]\n",
+       "      100.00% [140000/140000 05:55<00:00 Sampling 4 chains, 0 divergences]\n",
        "    </div>\n",
        "    "
       ],
@@ -153,9 +152,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 354 seconds.\n",
-      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
+      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 395 seconds.\n",
       "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
       "The estimated number of effective samples is smaller than 200 for some parameters.\n"
      ]
@@ -164,10 +161,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Change Point Guess 1.0\n",
-      "{'change_point_confidence': [1.0], 'mus': [(0.0023323880666780163, 0.0008371841744423609)], 'mu_diff': [-0.0014952038922356554], 'tau_map': ['2021-01-10'], 'tau_std': [148.7006962275589], 'entropy': [2.9526661589778502], 'change_point_guess': [1.0]}\n",
+      "Change Point Guess 0.25\n",
+      "{'change_point_confidence': [0.25], 'mus': [(0.009015622219098773, 0.011524003066574464)], 'mu_diff': [0.0025083808474756913], 'tau_map': ['2020-01-01'], 'tau_std': [137.09623688628048], 'entropy': [5.218872264011381], 'change_point_guess': [0.25]}\n",
       "appending\n",
-      "working on nio\n"
+      "working on kodak\n"
      ]
     },
     {
@@ -186,181 +183,20 @@
       ">Metropolis: [beta_1]\n",
       ">Metropolis: [alpha_1]\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [140000/140000 03:41<00:00 Sampling 4 chains, 0 divergences]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 248 seconds.\n",
-      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
-      "The rhat statistic is larger than 1.4 for some parameters. The sampler did not converge.\n",
-      "The estimated number of effective samples is smaller than 200 for some parameters.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Change Point Guess 1.0\n",
-      "{'change_point_confidence': [1.0], 'mus': [(0.005484919474305361, 0.013266042177712267)], 'mu_diff': [0.007781122703406906], 'tau_map': ['2020-10-11'], 'tau_std': [69.40882676389283], 'entropy': [2.757452672652039], 'change_point_guess': [1.0]}\n",
-      "appending\n",
-      "working on virus\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
-      "  trace = pm.sample(steps, tune=tune, step = step)\n",
-      "Multiprocess sampling (4 chains in 4 jobs)\n",
-      "CompoundStep\n",
-      ">Metropolis: [delta]\n",
-      ">Metropolis: [change_point_beta]\n",
-      ">Metropolis: [tau_beta]\n",
-      ">Metropolis: [beta_2]\n",
-      ">Metropolis: [alpha_2]\n",
-      ">Metropolis: [beta_1]\n",
-      ">Metropolis: [alpha_1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='140000' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      100.00% [140000/140000 06:30<00:00 Sampling 4 chains, 0 divergences]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Sampling 4 chains for 5_000 tune and 30_000 draw iterations (20_000 + 120_000 draws total) took 429 seconds.\n",
-      "C:\\Users\\lnajt\\anaconda3\\envs\\ML\\lib\\site-packages\\arviz\\stats\\diagnostics.py:561: RuntimeWarning: invalid value encountered in double_scalars\n",
-      "  (between_chain_variance / within_chain_variance + num_samples - 1) / (num_samples)\n",
-      "The number of effective samples is smaller than 10% for some parameters.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Change Point Guess 1.0\n",
-      "{'change_point_confidence': [1.0], 'mus': [(0.01515717074209762, 0.0018224446601984431)], 'mu_diff': [-0.013334726081899177], 'tau_map': ['2020-04-09'], 'tau_std': [2.9174578867767034], 'entropy': [2.1174512889488297], 'change_point_guess': [1.0]}\n",
-      "appending\n",
-      "working on wsb\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\lnajt\\Documents\\GitHub\\ErdosInstitute\\ErdosInstitute-SIG_Project\\Automated\\ChangePointAnalysis\\BayesianMethods.py:134: FutureWarning: In v4.0, pm.sample will return an `arviz.InferenceData` object instead of a `MultiTrace` by default. You can pass return_inferencedata=True or return_inferencedata=False to be safe and silence this warning.\n",
-      "  trace = pm.sample(steps, tune=tune, step = step)\n",
-      "Multiprocess sampling (4 chains in 4 jobs)\n",
-      "CompoundStep\n",
-      ">Metropolis: [delta]\n",
-      ">Metropolis: [change_point_beta]\n",
-      ">Metropolis: [tau_beta]\n",
-      ">Metropolis: [beta_2]\n",
-      ">Metropolis: [alpha_2]\n",
-      ">Metropolis: [beta_1]\n",
-      ">Metropolis: [alpha_1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='16389' class='' max='140000' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      11.71% [16389/140000 00:39<05:00 Sampling 4 chains, 0 divergences]\n",
-       "    </div>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "up_to = 2 # Only calculate change points for up_to of the popular words. Set to None to do all of them.\n",
+    "up_to = 1 # Only calculate change points for up_to of the popular words. Set to None to do all of them.\n",
     "daily_words = 2 # Get the daily_words most popular posts on each day.\n",
     "\n",
-    "print('Computing the changepoints:')\n",
+    "\n",
+    "# Compute the changepoints\n",
     "ChangePointAnalysis.changepointanalysis([subreddit], up_to = up_to, daily_words = daily_words)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "aae7a4ef",
+   "id": "64f31c07",
    "metadata": {},
    "source": [
     "After running, these files will in ../Data/subreddit_subreddit/Changepoints/Metropolis_30000Draws_5000Tune\n",
@@ -370,7 +206,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d034a48",
+   "id": "aceea485",
    "metadata": {},
    "source": [
     "For instance: \n",
@@ -380,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9eada99a",
+   "id": "22aae378",
    "metadata": {},
    "source": [
     "### Brief explanation of how this works:\n",
@@ -401,39 +237,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de454300",
+   "id": "400ec0a4",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "\n",
-    "DATA_FOLDER = f\"../Data/subreddit_{subreddit}/Changepoints/metropolis_30000Draws_5000Tune/\"\n",
-    "dataframe_path = f\"../Data/subreddit_{subreddit}/\"\n",
-    "preprocessed_location = dataframe_path + \"changepoint_preprocessed.pkl\"\n",
-    "pd.read_pickle(preprocessed_location)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6af418d6",
+   "execution_count": null,
+   "id": "92333afd",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "c8657e2b",
+   "id": "0ee28b8c",
    "metadata": {},
    "source": [
     "# Neural Nets\n",
     "\n",
-    "some text"
+    "The following code will train a neural net that predicts, given a submission's title text and time of posting, whether that submission's score will be above the median. \n",
+    "\n",
+    "We use pre-trained GloVe word embeddings in order to convert the title text into a vector that can be used in the neural net. These word embeddings are tuned along with the model parameters as the model is being trained. \n",
+    "\n",
+    "This technique and the neural net's architecture are taken from a blog post of Max Woolf, https://minimaxir.com/2017/06/reddit-deep-learning/.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4e04929",
+   "id": "951f5e3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "095998b0",
+   "id": "d066db0d",
    "metadata": {},
    "source": [
     "## Predicted popularity as a time series"
@@ -451,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8971f160",
+   "id": "6bc89e0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,16 +295,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77861752",
+   "id": "28eb01c8",
    "metadata": {},
    "source": [
-    "![title](../Data/subreddit_WallStreetBets/GMEsixtimes.png)\n"
+    "This will produce a picture like the following:\n",
+    "![title](../Data/subreddit_WallStreetBets/6_GME.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc28ea7f",
+   "metadata": {},
+   "source": [
+    "## Workshopping example"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b861cacf",
+   "id": "c7da33a7",
    "metadata": {},
    "outputs": [],
    "source": []
