--- a/Sandbox/Notebooks/BrokenGuidedTour.ipynb
+++ b/Sandbox/Notebooks/BrokenGuidedTour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "80601a95",
    "metadata": {
     "scrolled": true
@@ -314,10 +314,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "6bc89e0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-c8e1f8ad641c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mtext\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"GME GME GME GME GME GME\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mCreateNeuralNets\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimeseries\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mword_tokenizer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Documents\\Github\\ErdosInstitute-SIG_Project\\Automated\\NeuralNets\\CreateNeuralNets.py\u001b[0m in \u001b[0;36mtimeseries\u001b[1;34m(df, text, model, word_tokenizer)\u001b[0m\n\u001b[0;32m     81\u001b[0m         \u001b[0minput_dayofyear\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtimetuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtm_yday\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     82\u001b[0m         \u001b[0minput_year\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdate\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0myear\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mmin_year\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 83\u001b[1;33m         \u001b[0mpredict_list\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mencoded_text\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_hour\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_dayofweek\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_minute\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_dayofyear\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minput_year\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     84\u001b[0m     \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mylim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m     \u001b[0max\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgca\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "text = \"GME GME GME GME GME GME\"\n",
     "CreateNeuralNets.timeseries(df, text, model, word_tokenizer)"
@@ -362,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c69227a1",
+   "id": "1c5d56e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5968dfec",
+   "id": "eea2a4fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "9a9af5b2",
+   "id": "67c06ee1",
    "metadata": {},
    "outputs": [
     {
@@ -407,91 +420,380 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b9cfee3f",
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ac9e14a4",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "We see that the predicted popularity increases after each change we make. \n",
+    "potential_titles = [\"trump\", \"Buy TSLA! I like the stock\", \"Buy TSLA! Elon likes the stock\",\n",
+    "                    \"TSLA is the next GME. Elon likes the stock\", \n",
+    "                    \"TSLA is the next GME. To the moon! Elon likes the stock\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "118ed351",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9445473\n",
+      "0.957647\n",
+      "0.9620316\n",
+      "0.98298347\n",
+      "0.983858\n"
+     ]
+    }
+   ],
+   "source": [
+    "for title in potential_titles:\n",
+    "    print(model.predict([CreateNeuralNets.encode_text(title,word_tokenizer)] + input_info)[0][0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7efb39c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def GetPop(title):\n",
+    "    return model.predict([CreateNeuralNets.encode_text(title,word_tokenizer)] + input_info)[0][0][0]\n",
     "\n",
-    "Disclaimer: we are investigating a last-minute issue. These probabilities are higher than expected from earlier experimentation, and there is the possibility of a bug in our code. "
+    "word_dict={}\n",
+    "for word in list(word_tokenizer.word_index)[:200]:\n",
+    "    word_dict[word] = GetPop([word])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "3b80025c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'the': 0.9044939,\n",
+       " 'to': 0.8953433,\n",
+       " 'and': 0.89906156,\n",
+       " 'is': 0.91297436,\n",
+       " 'for': 0.8880732,\n",
+       " 'a': 0.90916115,\n",
+       " 'on': 0.86998737,\n",
+       " 'gme': 0.9267406,\n",
+       " 'of': 0.9135709,\n",
+       " 'in': 0.8971391,\n",
+       " 'i': 0.910398,\n",
+       " 'you': 0.9154619,\n",
+       " 'this': 0.9116447,\n",
+       " 'are': 0.91067934,\n",
+       " 'buy': 0.8920113,\n",
+       " 'amc': 0.89736325,\n",
+       " 'it': 0.9060867,\n",
+       " 'what': 0.8751031,\n",
+       " 'we': 0.92022926,\n",
+       " 'my': 0.9064754,\n",
+       " '2020': 0.9007596,\n",
+       " 'robinhood': 0.89834523,\n",
+       " 'not': 0.91995394,\n",
+       " 'with': 0.88026905,\n",
+       " 'up': 0.88377494,\n",
+       " 'your': 0.92264813,\n",
+       " 'all': 0.9200825,\n",
+       " 'will': 0.8994677,\n",
+       " 'be': 0.91057086,\n",
+       " 'hold': 0.9194993,\n",
+       " 'why': 0.9059347,\n",
+       " 'market': 0.8890501,\n",
+       " 'how': 0.8829134,\n",
+       " 'just': 0.9145279,\n",
+       " 'nok': 0.8734266,\n",
+       " 'that': 0.8982767,\n",
+       " 'do': 0.87959886,\n",
+       " 'can': 0.88819027,\n",
+       " 'dd': 0.9230969,\n",
+       " 'stock': 0.8606342,\n",
+       " 'at': 0.9026979,\n",
+       " 'from': 0.89833105,\n",
+       " 'now': 0.9199656,\n",
+       " 'if': 0.91718245,\n",
+       " 'or': 0.844771,\n",
+       " 'about': 0.89333105,\n",
+       " 'may': 0.9071305,\n",
+       " 'going': 0.90228045,\n",
+       " 'short': 0.8804797,\n",
+       " 'have': 0.89267343,\n",
+       " 'calls': 0.8713801,\n",
+       " 'log': 0.7851616,\n",
+       " 'wsbvotebot': 0.7942103,\n",
+       " 'get': 0.89436054,\n",
+       " 'earnings': 0.8626139,\n",
+       " 'bb': 0.91508734,\n",
+       " 'me': 0.89492327,\n",
+       " 'out': 0.8971995,\n",
+       " 'moon': 0.8840842,\n",
+       " 'go': 0.8890774,\n",
+       " 'sell': 0.8969344,\n",
+       " 'they': 0.90553457,\n",
+       " 'next': 0.89492846,\n",
+       " 'down': 0.87456036,\n",
+       " 'money': 0.89471483,\n",
+       " '02': 0.8745384,\n",
+       " 'but': 0.8839199,\n",
+       " 'today': 0.9247149,\n",
+       " 'puts': 0.8713423,\n",
+       " 'trading': 0.850325,\n",
+       " 'time': 0.89045215,\n",
+       " 'us': 0.90282154,\n",
+       " 'wsb': 0.92512685,\n",
+       " 'stocks': 0.83930004,\n",
+       " 'still': 0.9027682,\n",
+       " 'more': 0.9192246,\n",
+       " 'pltr': 0.9452779,\n",
+       " 'options': 0.86078864,\n",
+       " 'so': 0.9083439,\n",
+       " 'has': 0.90827185,\n",
+       " 'by': 0.87951213,\n",
+       " '🚀': 0.89572,\n",
+       " 'new': 0.89978564,\n",
+       " 'play': 0.87498885,\n",
+       " 'buying': 0.8651786,\n",
+       " 'like': 0.8966371,\n",
+       " 'tomorrow': 0.9302144,\n",
+       " 'tsla': 0.92009836,\n",
+       " 'as': 0.9067056,\n",
+       " 'an': 0.8938751,\n",
+       " 'thread': 0.93280184,\n",
+       " 'here': 0.89681435,\n",
+       " 'no': 0.9064652,\n",
+       " 'some': 0.88839316,\n",
+       " 'week': 0.91716504,\n",
+       " 'should': 0.885867,\n",
+       " '2': 0.9077923,\n",
+       " '1': 0.91341853,\n",
+       " 'after': 0.8820416,\n",
+       " 'shares': 0.89180744,\n",
+       " 'when': 0.8641757,\n",
+       " 'make': 0.8969706,\n",
+       " 'fuck': 0.9206854,\n",
+       " 'day': 0.89914775,\n",
+       " 'fucking': 0.9387061,\n",
+       " 'who': 0.90409505,\n",
+       " 'dip': 0.90930295,\n",
+       " 'back': 0.90564513,\n",
+       " 'spy': 0.90272844,\n",
+       " 'one': 0.9112545,\n",
+       " 'long': 0.855827,\n",
+       " 'their': 0.8967923,\n",
+       " \"don't\": 0.91564906,\n",
+       " 'into': 0.89590406,\n",
+       " 'was': 0.903736,\n",
+       " 'bought': 0.90815735,\n",
+       " 'yolo': 0.9075041,\n",
+       " 'anyone': 0.87125933,\n",
+       " 'only': 0.8954001,\n",
+       " 'call': 0.8663267,\n",
+       " 'stop': 0.937373,\n",
+       " 'need': 0.89031464,\n",
+       " 'people': 0.92975885,\n",
+       " 'over': 0.8946677,\n",
+       " 'big': 0.9113859,\n",
+       " 'holding': 0.9156814,\n",
+       " 'guys': 0.900795,\n",
+       " \"i'm\": 0.89520276,\n",
+       " 'good': 0.87345684,\n",
+       " 'squeeze': 0.8960647,\n",
+       " 'discussion': 0.91502404,\n",
+       " 'tendies': 0.8729788,\n",
+       " 'price': 0.8940673,\n",
+       " 'right': 0.9115583,\n",
+       " 'selling': 0.927333,\n",
+       " 'think': 0.8971713,\n",
+       " 'there': 0.8948056,\n",
+       " 'am': 0.9057218,\n",
+       " 'any': 0.8733082,\n",
+       " 'trade': 0.8709616,\n",
+       " 'tesla': 0.9117423,\n",
+       " 'where': 0.8481808,\n",
+       " '3': 0.88877404,\n",
+       " 'before': 0.8919165,\n",
+       " 'know': 0.9046358,\n",
+       " '🚀🚀🚀': 0.9226054,\n",
+       " \"it's\": 0.9098016,\n",
+       " 'off': 0.89297473,\n",
+       " '2021': 0.88692933,\n",
+       " 'our': 0.9013661,\n",
+       " 'retards': 0.90076286,\n",
+       " 'than': 0.9134488,\n",
+       " 'daily': 0.92335045,\n",
+       " 'put': 0.8778827,\n",
+       " '5': 0.8853049,\n",
+       " 'let': 0.9014494,\n",
+       " 'too': 0.8807086,\n",
+       " 'them': 0.9089873,\n",
+       " 'take': 0.9069563,\n",
+       " '10': 0.9095398,\n",
+       " 'news': 0.89543027,\n",
+       " 'keep': 0.89409804,\n",
+       " 'rh': 0.83940524,\n",
+       " 'last': 0.9055835,\n",
+       " 'don’t': 0.9232273,\n",
+       " 'want': 0.9002092,\n",
+       " 'got': 0.9029844,\n",
+       " 'help': 0.8417022,\n",
+       " 'other': 0.8917598,\n",
+       " 'again': 0.91935897,\n",
+       " 'these': 0.8851656,\n",
+       " 'way': 0.8488015,\n",
+       " 'first': 0.8932948,\n",
+       " 'nio': 0.8880192,\n",
+       " 'please': 0.91213596,\n",
+       " 'does': 0.8848173,\n",
+       " 'did': 0.8705561,\n",
+       " 'post': 0.8971138,\n",
+       " 'hedge': 0.866212,\n",
+       " 'its': 0.8940492,\n",
+       " 'been': 0.9122288,\n",
+       " 'i’m': 0.881915,\n",
+       " 'gamestop': 0.89947844,\n",
+       " '4': 0.8967643,\n",
+       " 'line': 0.9122471,\n",
+       " 'being': 0.9035599,\n",
+       " 'moves': 0.93919843,\n",
+       " 'app': 0.862921,\n",
+       " 'best': 0.8638708,\n",
+       " 'account': 0.8773109,\n",
+       " 'gains': 0.89193094,\n",
+       " 'open': 0.9167336,\n",
+       " 'bear': 0.8858715,\n",
+       " 'gang': 0.91751677,\n",
+       " 'nokia': 0.9059195,\n",
+       " '20': 0.9043823,\n",
+       " 'getting': 0.8885211,\n",
+       " 'everyone': 0.9128069,\n",
+       " 'it’s': 0.91694254,\n",
+       " 'thoughts': 0.8064458}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "5fa591a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "189625     Massive $GE bond buy. Does this mean anything...\n",
+       "475666     Holding from Italy 🇮🇹!! Bought at 419$, not s...\n",
+       "937567     Poll: If you executed JAN 29 ITM GME calls ha...\n",
+       "326753     Stock Market News for Today | Stimulus Bill |...\n",
+       "98816      What happens when countries start repoing on ...\n",
+       "                                ...                        \n",
+       "929998     Contrarian opinion: what if we’re at (or past...\n",
+       "167930     Tesla shares turn negative in wild trading, g...\n",
+       "250472                          PLTR Joins the U.S. Army 🚀 \n",
+       "148359      NBA may not be coming back at DIS or otherwise \n",
+       "815561                          Got help stick it to them! \n",
+       "Name: title, Length: 60457, dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "e06c2b9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.91757095\n"
+     ]
+    }
+   ],
+   "source": [
+    "CheckPopularity([\"Got help stick it to them!\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "f7392edb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df[:200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a4195db5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = df2.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1d2bc5d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2['predicted_pop'] = df2.title.apply(lambda x: GetPop(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "a74d8a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6831914186477661"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min(df2.predicted_pop)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2c099a2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97c42fb5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c0786fd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d21bc2f1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f42a8f0c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9164aa72",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7b28db60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "id": "08954492",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cad6cbc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e93d7f5d",
+   "id": "8cde9e88",
    "metadata": {},
    "outputs": [],
    "source": []
