--- a/GuidedTour/GuidedTour.ipynb
+++ b/GuidedTour/GuidedTour.ipynb
@@ -13,9 +13,9 @@
     "import sys\n",
     "import datetime as dt\n",
     "\n",
-    "#os.chdir(\"../Automated/\")\n",
-    "#from DataGathering import RedditScraper\n",
-    "#from ChangePointAnalysis import ChangePointAnalysis\n",
+    "os.chdir(\"../Automated/\")\n",
+    "from DataGathering import RedditScraper\n",
+    "from ChangePointAnalysis import ChangePointAnalysis\n",
     "from NeuralNets import CreateNeuralNets\n",
     "from matplotlib import pyplot as plt\n",
     "import numpy as np\n",
