--- a/GuidedTour/GuidedTour.ipynb
+++ b/GuidedTour/GuidedTour.ipynb
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1202d205",
+   "id": "8fd095dc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "25dccf6d",
+   "id": "eb70006f",
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ded87913",
+   "id": "db11f986",
    "metadata": {},
    "source": [
     "## Warning: \n",
@@ -284,7 +284,9 @@
     "\n",
     "Of course, this is not a realistic picture of the process; the independence of the different draws from the betas is especially unlike the data. However, it appears to be good enough to discover change points, especially when p and mu_2 - mu_1 are used together.\n",
     "\n",
-    "As currently written, it only handles one change point, however this can be improved.\n"
+    "As currently written, it only handles one change point, however this can be improved.\n",
+    "\n",
+    "(This model was inspired by the changepoint example from Chapter 1 of Bayesian Methods for Hackers: Probabilistic Programming and Bayesian Inference.)\n"
    ]
   },
   {
